.helm/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipit-svc
spec:
  type: ClusterIP
  selector:
    app: shipit-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
